--- a/back-end/package.json
+++ b/back-end/package.json
@@ -13,9 +13,9 @@
   "author": "Roni Yohanan",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "http": "0.0.1-security"
+    "http": "0.0.1-security",
+    "usb": "^2.9.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
