--- a/back-end/tsconfig.json
+++ b/back-end/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
-      "target": "es2020",
-      "module": "commonjs",
+      "target": "ES2020",
+      "module": "CommonJS",
       // "allowJs": false,
       "sourceMap": true,
       "removeComments": true,
@@ -19,7 +19,5 @@
       "forceConsistentCasingInFileNames": true,
       "outDir": "./dist/"
     },
-    "include": [
-      "src/**/*"
-  , "jest.config.js"    ]
+    "include": [ "src/**/*" ]
   }
